# chesscalc

./: README  pyproject.toml  setup.cfg  setup.py
chesscalc/: __init__.py  calculate.py
chesscalc/apsw/: database.py  database_du.py
chesscalc/basecore/: database.py
chesscalc/berkeleydb/: database.py  database_du.py
chesscalc/core/: __init__.py  apply_identities.py  calculate.py  configuration.py  constants.py  delete_games.py  eventrecord.py  export.py  filespec.py  gamerecord.py  identify_event.py  identify_item.py  identify_mode.py  identify_person.py  identify_playertype.py  identify_termination.py  identify_timecontrol.py  identity.py  mirror_identities.py  moderecord.py  name_lookup.py  performancerecord.py  performances.py  pgnheaders.py  playerrecord.py  playertyperecord.py  population.py  tab_from_selection.py  terminationrecord.py  timecontrolrecord.py  update_database.py  update_rule.py
chesscalc/db/: database.py  database_du.py
chesscalc/db_tkinter/: database.py  database_du.py
chesscalc/dpt/: database.py  database_du.py  dptnofistat.py
chesscalc/gui/: __init__.py  calculator.py  events.py  eventsgrid.py  eventspec.py  eventsrow.py  games.py  gamesgrid.py  gamesrow.py  gridlocator.py  help.py  help_.py  modes.py  modesgrid.py  modesrow.py  performance.py  performancedu.py  persons.py  personsgrid.py  personsrow.py  players.py  playersgrid.py  playersrow.py  playertypes.py  playertypesrow.py  population.py  prediction.py  report.py  rule.py  ruleedit.py  ruleinsert.py  ruleshow.py  selectors.py  selectorsgrid.py  selectorsrow.py  terminations.py  terminationsrow.py  timecontrols.py  timecontrolsgrid.py  timecontrolsrow.py
chesscalc/help/: __init__.py  aboutcalculator.txt  calculator.txt
chesscalc/help_/: __init__.py
chesscalc/lmdb/: database.py  database_du.py
chesscalc/shared/: alldu.py  dbdu.py  litedu.py  rundu.py  task.py
(+12 files in other folders)
