[metadata]
name = chesscalc
version = 1.2.5.dev0
description = Calculate player performances in chess games
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    chesscalc
    chesscalc.core
    chesscalc.gui
    chesscalc.help
install_requires =
    solentware-misc==1.4.dev0

[options.package_data]
chesscalc.help = *.txt
